--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,21 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:zY2I7rhAuPoyELy4+zaO+N/n1f5WMrZWwufNA75rzvY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://infocasas_api.test
+WWWUSER=1000
+WWWGROUP=1000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=infocasas_api
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=admin
+DB_PASSWORD=123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -22,9 +24,9 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=127.0.0.1
+MEMCACHED_HOST=memcached
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -50,3 +52,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SCOUT_DRIVER=meilisearch
+MEILISEARCH_HOST=http://meilisearch:7700
